examples/test/testpolicy10638.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10638
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key38: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value22
          key26: value33
          key49: value10
      podSelector:
        matchLabels:
          key20: value28
          key42: value29
